tests/ui/consts/const_refs_to_static-ice-121413.stderr
error[E0433]: failed to resolve: use of undeclared type `AtomicUsize`
  --> $DIR/const_refs_to_static-ice-121413.rs:8:28
   |
LL |     static FOO: dyn Sync = AtomicUsize::new(0);
   |                            ^^^^^^^^^^^ use of undeclared type `AtomicUsize`
   |
help: consider importing this struct
   |
LL + use std::sync::atomic::AtomicUsize;
   |

error[E0277]: the size for values of type `(dyn Sync + 'static)` cannot be known at compilation time
  --> $DIR/const_refs_to_static-ice-121413.rs:8:17
   |
LL |     static FOO: dyn Sync = AtomicUsize::new(0);
   |                 ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Sync + 'static)`
   = note: statics and constants must have a statically known size

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0433.
For more information about an error, try `rustc --explain E0277`.
